--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
 
         <!-- Run the game code -->
-        <script type="text/javascript" src="html5game/Flower Picker Simulator.js?JICYB=1672606110"></script>
+        <script type="text/javascript" src="html5game/Flower Picker Simulator.js?GXIZB=1235204925"></script>
         <script>window.onload = GameMaker_Init;</script>
     </body>
 </html>
