--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
 
         <!-- Run the game code -->
-        <script type="text/javascript" src="html5game/Flower Picker Simulator.js?KOZYB=1812427109"></script>
+        <script type="text/javascript" src="html5game/Flower Picker Simulator.js?LDCAC=434400324"></script>
         <script>window.onload = GameMaker_Init;</script>
     </body>
 </html>
