--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
 
         <!-- Run the game code -->
-        <script type="text/javascript" src="html5game/Flower Picker Simulator.js?QPGYB=467873185"></script>
+        <script type="text/javascript" src="html5game/Flower Picker Simulator.js?VNEBC=775682380"></script>
         <script>window.onload = GameMaker_Init;</script>
     </body>
 </html>
